# ComfyUI-Image-Size-Tools

./: .gitignore  CLAUDE.md  README.md  __init__.py  image_size_nodes.py  node_pack.md  pyproject.toml  requirements.txt  res_reference.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  question_discussion.md
.github/workflows/: publish.yml
nodes/: __init__.py  flux_resolution_node.py  sd15_resolution_node.py  sdxl_resolution_node.py
utils/: __init__.py  resolution_data.py
