[project]
name = "image-size-tools"
version = "0.3.2"
description = "Resolution calculators and image size detection for AI models (SD 1.5, SDXL, Flux.1 Dev, WAN2.1)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = []
keywords = ["comfyui", "stable-diffusion", "image-generation", "resolution", "sdxl", "flux", "wan21"]
authors = [
    {name = "websinthe"}
]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Repository = "https://github.com/TheLustriVA/ComfyUI-Image-Size-Tools"
"Bug Tracker" = "https://github.com/TheLustriVA/ComfyUI-Image-Size-Tools/issues"

[tool.comfy]
PublisherId = "TheLustriVA"
DisplayName = "Image Size Tools"
Icon = "https://github.com/TheLustriVA/ComfyUI-Image-Size-Tools/main/assets/icon.svg"
Banner = "https://github.com/TheLustriVA/ComfyUI-Image-Size-Tools/main/assets/banner.svg"
requires-comfyui = ">=0.1.0"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
